{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 19,
  "lineage": "fde4e45d-af4f-d6b5-70b8-ce1eb3aee0bc",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725425827:vpc/vpc-0c1afcd66dcda0546",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-009016edfaed21ccb",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-06eb61d93386ed545",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1afcd66dcda0546",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00a220ea1f11f8f55",
            "owner_id": "851725425827"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "rancher-listener1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725425827:listener/app/petclinic-rancher-alb/3af7edb63bb3d152/9995937c5ff50393",
            "certificate_arn": "arn:aws:acm:us-east-1:851725425827:certificate/8cd5e3ee-fede-420a-80eb-d85935356b2b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:851725425827:targetgroup/clarus-rancher-http-80-tg/9b90001af5ce1e9d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725425827:listener/app/petclinic-rancher-alb/3af7edb63bb3d152/9995937c5ff50393",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:851725425827:loadbalancer/app/petclinic-rancher-alb/3af7edb63bb3d152",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb_target_group.rancher-tg",
            "aws_lb.rancher-alb",
            "aws_security_group.rancher-alb",
            "data.aws_acm_certificate.cert"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "rancher-listener2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725425827:listener/app/petclinic-rancher-alb/3af7edb63bb3d152/29434ce30c7df792",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725425827:listener/app/petclinic-rancher-alb/3af7edb63bb3d152/29434ce30c7df792",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:851725425827:loadbalancer/app/petclinic-rancher-alb/3af7edb63bb3d152",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.rancher-alb",
            "aws_security_group.rancher-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "rancher-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725425827:targetgroup/clarus-rancher-http-80-tg/9b90001af5ce1e9d",
            "arn_suffix": "targetgroup/clarus-rancher-http-80-tg/9b90001af5ce1e9d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725425827:targetgroup/clarus-rancher-http-80-tg/9b90001af5ce1e9d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "clarus-rancher-http-80-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c1afcd66dcda0546"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "rancher-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725425827:targetgroup/clarus-rancher-http-80-tg/9b90001af5ce1e9d-20241030133557987100000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:851725425827:targetgroup/clarus-rancher-http-80-tg/9b90001af5ce1e9d",
            "target_id": "i-095bb65af98a5a129"
          },
          "dependencies": [
            "aws_alb_target_group.rancher-tg",
            "aws_iam_instance_profile.profile_for_rancher",
            "aws_iam_role.role_for_rancher",
            "aws_instance.tf-rancher-server",
            "aws_key_pair.generated_key",
            "aws_security_group.rancher-alb",
            "aws_security_group.tf-rancher-sec-gr",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf-rancher-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:851725425827:instance/i-095bb65af98a5a129",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "petclinic_role_rancher",
            "id": "i-095bb65af98a5a129",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.medium",
            "ipv6_address_count": 0,
            "key_name": "petclinic-ranchertr",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05bd8dd927f5ec65f",
            "private_dns": "ip-172-31-23-155.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.23.155",
            "public_dns": "ec2-54-173-208-193.compute-1.amazonaws.com",
            "public_ip": "54.173.208.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-055784d3cb7e8e872",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "rancher-server-sec-gr"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07be199b86168820a",
            "tags": {
              "Name": "petclinic-rancher-server",
              "kubernetes.io/cluster/petclinic-Rancher": "owned"
            },
            "tags_all": {
              "Name": "petclinic-rancher-server",
              "kubernetes.io/cluster/petclinic-Rancher": "owned"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b03e9f3cc3a72d59"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.profile_for_rancher",
            "aws_iam_role.role_for_rancher",
            "aws_key_pair.generated_key",
            "aws_security_group.rancher-alb",
            "aws_security_group.tf-rancher-sec-gr",
            "tls_private_key.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "rancher-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725425827:loadbalancer/app/petclinic-rancher-alb/3af7edb63bb3d152",
            "arn_suffix": "app/petclinic-rancher-alb/3af7edb63bb3d152",
            "desync_mitigation_mode": "defensive",
            "dns_name": "petclinic-rancher-alb-1734163875.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725425827:loadbalancer/app/petclinic-rancher-alb/3af7edb63bb3d152",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "petclinic-rancher-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b490ae87f1eba09f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0170dabfbcbb597bb"
              },
              {
                "subnet_id": "subnet-07be199b86168820a"
              },
              {
                "subnet_id": "subnet-0fd1088f5980d7352"
              }
            ],
            "subnets": [
              "subnet-0170dabfbcbb597bb",
              "subnet-07be199b86168820a",
              "subnet-0fd1088f5980d7352"
            ],
            "vpc_id": "vpc-0c1afcd66dcda0546",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.rancher-alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rancher-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725425827:security-group/sg-0b490ae87f1eba09f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b490ae87f1eba09f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "petclinicdt-rancher-alb-sec-gr",
            "name_prefix": "",
            "owner_id": "851725425827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "petclinicdt-rancher-alb-sec-gr",
              "kubernetes.io/cluster/petclinic-Rancher": "owned"
            },
            "tags_all": {
              "Name": "petclinicdt-rancher-alb-sec-gr",
              "kubernetes.io/cluster/petclinic-Rancher": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1afcd66dcda0546"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf-rancher-sec-gr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725425827:security-group/sg-0b03e9f3cc3a72d59",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2376,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2376
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "35.167.242.46/32",
                  "52.33.59.17/32",
                  "35.160.43.145/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0b03e9f3cc3a72d59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b490ae87f1eba09f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rancher-server-sec-gr",
            "name_prefix": "",
            "owner_id": "851725425827",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rancher-server-sec-gr",
              "kubernetes.io/cluster/petclinic-Rancher": "owned"
            },
            "tags_all": {
              "Name": "rancher-server-sec-gr",
              "kubernetes.io/cluster/petclinic-Rancher": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1afcd66dcda0546"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rancher-alb"
          ]
        }
      ]
    }
  ]
}